--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -8,7 +8,7 @@
 \noindent
 Optimizing compilers are large and complex programs. Fixed test-suites are inadequate for ensuring correct behavior over the range of accepted inputs, and the lack of formal specifications for sections of compilers renders formal verification unusable beyond isolated subcomponents.
 
-Differential testing is a promising methodology for identifying bugs through the pseudo-random generation of test cases. Figure~\ref{fig:difftest} shows the differential testing methodology.
+Differential testing is a promising methodology for identifying bugs through the pseudo-random generation of test cases. Figure~\ref{fig:difftest} shows the differential testing methodology. A program generator (e.g. CSmith) generates a large, random program (test case), which is run on a range of different compilers or compiler options. The outcomes are compared to determine if the test case is interesting.
 
 \begin{figure}
 	\centering
@@ -32,7 +32,7 @@ The design trade-off of our approach is that unstructured, syntactic-level synth
 % Reference: C99 spec appendix J2 - list of UBs
 % OpenCL un-undefines some of those behaviours (e.g. it provides conversion functions between data types), but also adds to them.
 
-In this work we target OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. The importance of compiler behavior is amplified for OpenCL since it is compiled online. OpenCL code is shipped by developers to customers for compilation online. OpenCL is increasingly used in safety critical software products such as automotive vision. Segmentation faults and other runtime crashes during online compilation can disrupt the execution of safety critical processes.
+In this work we target OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. The importance of sane compiler behavior is amplified for OpenCL since it is compiled online. OpenCL code is shipped by developers to customers for compilation online. OpenCL is increasingly used in safety critical software products such as automotive vision. Segmentation faults and other runtime crashes during online compilation can disrupt the execution of safety critical processes.
 
 \noindent We make the following contributions:
 %
