--- a/fig/kernel-sizes.tex
+++ b/fig/kernel-sizes.tex
@@ -1,7 +1,7 @@
 \begin{figure}
   \centering %
   % \subfloat[][AMD Tahiti 7970]{%
-    \includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
+    \includegraphics[width=\columnwidth]{build/img/runtimes}%
   %  \label{fig:npb-amd}}\\%
   % \subfloat[][NVIDIA GTX 970]{%
   %   \includegraphics[width=\textwidth]{img/ex1-B}%
