--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -26,4 +26,24 @@ For ``interesting'' programs: median CLgen kernel size is 12 lines. Median reduc
 
 Potentially interesting questions: What is the total lines of code which get run on each device during the tests? CLgen programs are smaller, but we get through more of them.
 
+\begin{figure}
+	\centering %
+	\includegraphics[width=\columnwidth]{build/img/runtimes}%
+	\caption{%
+		Runtimes}%
+	}%
+	\label{fig:runtimes} %
+\end{figure}
+
+
+\begin{figure}
+	\centering %
+	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
+	\caption{%
+		Kernel sizes. \cc{Data is incomplete, and this needs re-plotting and cleaning up}%
+	}%
+	\label{fig:kernel-sizes} %
+\end{figure}
+
+
 \input{fig/kernel-sizes}
