--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -30,7 +30,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Runtimes}%
+		Runtimes%
 	}%
 	\label{fig:runtimes} %
 \end{figure}
@@ -44,6 +44,3 @@ Potentially interesting questions: What is the total lines of code which get run
 	}%
 	\label{fig:kernel-sizes} %
 \end{figure}
-
-
-\input{fig/kernel-sizes}
