--- a/abstract.tex
+++ b/abstract.tex
@@ -5,7 +5,7 @@ These tools, by design, yield huge random programs which bare little resemblance
 
 We present a new approach for the generation of \emph{plausible} compiler test cases. We apply deep learning techniques over large corpuses of open source code fragments to learn models which describe the structure of common real world codes. We use these models to generate thousands of new programs, and show how the established differential testing methodology can be used to expose bugs in compilers which are symptomatic of real hand-written code.
 
-We also, for the first time, provide a means of testing compiler behaviour under invalid input conditions. We generate plausible but ill formed inputs.
+We also, for the first time, provide a means of testing compiler behaviour under plausibly-invalid input conditions. We generate plausible but ill formed inputs.
 
 This approach extends the state of the art in compiler test-case generation, automatically exposing bugs in compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques.
 \end{abstract}
