--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -14,7 +14,13 @@ Both testing frameworks were used for 48 hours each. CLSmith was configured with
 
 Table~\ref{tab:results}.
 
-\input{tab/results}
+\begin{table*}
+	\scriptsize %
+	\centering %
+	\input{build/tab/megatable}
+	\caption{Testing results using CLSmith and CLgen for 48 hours each. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), passed (\textbf{\cmark}), and rejected (\textbf{\xmark}) test cases for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means the full 48 hours of data have not yet been collected. All results are excluding reductions.}}
+	\label{tab:results}
+\end{table*}
 
 How long do reductions take? How many CLgen test cases can we run in that amount of time? Given the ratio of interesting CLgen test cases, how many more bugs could we find in the amount of time it takes to run a single reduction?
 
@@ -25,6 +31,8 @@ Median CLSmith kernel is 1086 lines long (excluding headers, and using CLSmith \
 For ``interesting'' programs: median CLgen kernel size is 12 lines. Median reduced CLSmith kernel size is 43 lines (894 lines before reduction). Figure~\ref{fig:kernel-sizes}.
 
 Potentially interesting questions: What is the total lines of code which get run on each device during the tests? CLgen programs are smaller, but we get through more of them.
+
+\cc{CLgen test cases are two orders of magnitude smaller than CLSmith programs which have been reduced.}
 
 \begin{figure}
 	\centering %
@@ -40,7 +48,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
 	\caption{%
-		Kernel sizes. \cc{Data is incomplete, and this needs re-plotting and cleaning up}%
+		Kernel line counts, grouped by classification. CLSmith programs with \emph{w} classification have been reduced.%
 	}%
 	\label{fig:kernel-sizes} %
 \end{figure}
