--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -2,7 +2,7 @@
 
 \paragraph{Test case generation} We mine GitHub for OpenCL fragments. We construct a corpus of example programs. We learn a generative model over these programs, and use a discriminative model to tune via feedback cycle. We use CLgen, our deep learning program synthesis tool, to generate thousands of OpenCL samples.
 
-\paragraph{OpenCL configurations tested} We conducted testing of X different OpenCL configurations, summarized in Table~\ref{tab:platforms}. A \emph{configuration} refers to an OpenCL \emph{<device, driver>} pair. We tested both different drivers for the same device, and different devices using the same driver.
+\paragraph{OpenCL configurations tested} We conducted testing of X different OpenCL configurations, summarized in Table~\ref{tab:platforms}. A \emph{configuration} refers to an OpenCL \emph{<device, driver>} pair. We covered a range of hardware available to us: 2 GPUs, 4 CPUs, an Accelerator, and an Emulator. 6 of the OpenCL implementations are commercial products, 2 of them are open source. We tested both different drivers for the same device, and different devices using the same driver.
 
 \input{tab/platforms}
 
