--- a/lst/bugs.tex
+++ b/lst/bugs.tex
@@ -8,7 +8,7 @@
 			}%
 		}%
 	}\\%
-	\subfloat[Compilation should fail, but config $6\pm$ succeeds then crashes program.]{%
+	\subfloat[Compilation should fail; config $6\pm$ succeeds then crashes program.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				\lstinputlisting{lst/bug2}%
 			}%
