--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -38,7 +38,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Runtimes%
+		Runtimes, excluding timeouts.%
 	}%
 	\label{fig:runtimes} %
 \end{figure}
@@ -51,4 +51,14 @@ Potentially interesting questions: What is the total lines of code which get run
 		Kernel line counts, grouped by classification. CLSmith programs with \emph{w} classification have been reduced.%
 	}%
 	\label{fig:kernel-sizes} %
+\end{figure}
+
+
+\begin{figure}
+	\centering %
+	\includegraphics[width=\columnwidth]{build/img/total-tests}%
+	\caption{%
+		Test cases.%
+	}%
+	\label{fig:total-tests} %
 \end{figure}
