--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -34,6 +34,8 @@ Potentially interesting questions: What is the total lines of code which get run
 
 \cc{CLgen test cases are two orders of magnitude smaller than CLSmith programs which have been reduced.}
 
+\cc{What is the bug rate per line of code?}
+
 \begin{figure}
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
