--- a/abstract.tex
+++ b/abstract.tex
@@ -1,11 +1,11 @@
 \begin{abstract}
-Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites are inadequate for ensuring these properties over the enormous range of possible inputs to a compiler, and the complexity of optimizing compilers renders them beyond the scope of formal verification. In recent years, grammar or template-based tools for random test case generation have proven successful for finding bugs.
+Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites are inadequate for ensuring these properties over the enormous range of possible inputs to a compiler, and the complexity of optimizing compilers renders them beyond the scope of formal verification. In recent years, probabilistic grammar-based tools have proven successful for finding bugs by comparing the output randomly generated programs across compilers.
 
-These tools, by design, yield huge random programs which bare little resemblance to actual real code written by human programmers. These ``implausible'' programs cause a triaging problem, as developers must inspect each problematic generated code to determine whether or not it exposes a bug worthy of fixing. [Only XX\% of ] What is needed is a technique for biasing the random generation of programs so that the generated codes are ``plausible'', and closely resemble that of real hand-written code.
+These tools, by design, yield large random programs which bare little resemblance to actual real code written by human programmers. These ``implausible'' programs cause a triaging problem, as developers must inspect each problematic generated code to determine whether or not it exposes a bug worthy of fixing. Further, these tools attempt to discover bugs using uncommon combinations of language constructs.
 
-We present a new approach for the generation of \emph{plausible} compiler test cases. We apply deep learning techniques over large corpuses of open source code fragments to learn models which describe the structure of common real world codes. We use these models to generate thousands of new programs, and show how the established differential testing methodology can be used to expose bugs in compilers which are symptomatic of real hand-written code.
+What is needed is a technique for biasing the random generation of programs so that the generated codes are ``plausible'', and closely resemble that of real hand-written code.
 
-We also, for the first time, provide a means of testing compiler behaviour under plausibly-invalid input conditions. We generate plausible but ill formed inputs.
+We present a new approach for the generation of \emph{plausible} compiler test cases. We apply deep learning techniques over large corpuses of open source code fragments to learn models which describe the structure of common real world codes. We use these models to generate thousands of code samples, and show how established differential testing methodologies can be used to expose bugs in compilers which are symptomatic of real hand-written code.
 
-This approach extends the state of the art in compiler test-case generation, automatically exposing bugs in compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques.
+This approach extends the state of the art in compiler test-case generation, automatically exposing bugs in compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques. , submitting XX bug reports to commercial and open source OpenCL implementations.
 \end{abstract}
